src/antlr4/RedQlParser.ts
// @ts-nocheck
// Generated from ./src/antlr4/RedQlParser.g4 by ANTLR 4.13.1
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import RedQlParserListener from "./RedQlParserListener.js";
import RedQlParserVisitor from "./RedQlParserVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class RedQlParser extends Parser {
	public static readonly OpenParen = 1;
	public static readonly CloseParen = 2;
	public static readonly Comma = 3;
	public static readonly Dot = 4;
	public static readonly And = 5;
	public static readonly DecimalLiteral = 6;
	public static readonly Identifier = 7;
	public static readonly WhiteSpaces = 8;
	public static readonly LineTerminator = 9;
	public static readonly EOF = Token.EOF;
	public static readonly RULE_redQl = 0;
	public static readonly RULE_blockOperator = 1;
	public static readonly RULE_singleExpression = 2;
	public static readonly RULE_arguments = 3;
	public static readonly RULE_argument = 4;
	public static readonly RULE_attribute = 5;
	public static readonly RULE_method = 6;
	public static readonly literalNames: (string | null)[] = [ null, "'('",
                                                            "')'", "','",
                                                            "'.'", "'&&'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, "OpenParen",
                                                             "CloseParen",
                                                             "Comma", "Dot",
                                                             "And", "DecimalLiteral",
                                                             "Identifier",
                                                             "WhiteSpaces",
                                                             "LineTerminator" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"redQl", "blockOperator", "singleExpression", "arguments", "argument",
		"attribute", "method",
	];
	public get grammarFileName(): string { return "RedQlParser.g4"; }
	public get literalNames(): (string | null)[] { return RedQlParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return RedQlParser.symbolicNames; }
	public get ruleNames(): string[] { return RedQlParser.ruleNames; }
	public get serializedATN(): number[] { return RedQlParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, RedQlParser._ATN, RedQlParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public redQl(): RedQlContext {
		let localctx: RedQlContext = new RedQlContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, RedQlParser.RULE_redQl);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 14;
			this.blockOperator();
			this.state = 15;
			this.match(RedQlParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public blockOperator(): BlockOperatorContext {
		let localctx: BlockOperatorContext = new BlockOperatorContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, RedQlParser.RULE_blockOperator);
		try {
			let _alt: number;
			this.state = 25;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 1, this._ctx) ) {
			case 1:
				localctx = new LoginAndBlockContext(this, localctx);
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 17;
				this.singleExpression();
				this.state = 20;
				this._errHandler.sync(this);
				_alt = 1 + 1;
				do {
					switch (_alt) {
					case 1 + 1:
						{
						{
						this.state = 18;
						this.match(RedQlParser.And);
						this.state = 19;
						this.singleExpression();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					this.state = 22;
					this._errHandler.sync(this);
					_alt = this._interp.adaptivePredict(this._input, 0, this._ctx);
				} while (_alt !== 1 && _alt !== ATN.INVALID_ALT_NUMBER);
				}
				break;
			case 2:
				localctx = new UnaryBlockContext(this, localctx);
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 24;
				this.singleExpression();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public singleExpression(): SingleExpressionContext {
		let localctx: SingleExpressionContext = new SingleExpressionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, RedQlParser.RULE_singleExpression);
		try {
			localctx = new MemberDotExpressionContext(this, localctx);
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 27;
			this.attribute();
			this.state = 28;
			this.match(RedQlParser.Dot);
			this.state = 29;
			this.method();
			this.state = 30;
			this.arguments();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public arguments(): ArgumentsContext {
		let localctx: ArgumentsContext = new ArgumentsContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, RedQlParser.RULE_arguments);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 32;
			this.match(RedQlParser.OpenParen);
			this.state = 41;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===6 || _la===7) {
				{
				this.state = 33;
				this.argument();
				this.state = 38;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===3) {
					{
					{
					this.state = 34;
					this.match(RedQlParser.Comma);
					this.state = 35;
					this.argument();
					}
					}
					this.state = 40;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
			}

			this.state = 43;
			this.match(RedQlParser.CloseParen);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public argument(): ArgumentContext {
		let localctx: ArgumentContext = new ArgumentContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, RedQlParser.RULE_argument);
		try {
			this.state = 48;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 4, this._ctx) ) {
			case 1:
				localctx = new ExpressionArgumentContext(this, localctx);
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 45;
				this.singleExpression();
				}
				break;
			case 2:
				localctx = new AttributeArgumentContext(this, localctx);
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 46;
				this.attribute();
				}
				break;
			case 3:
				localctx = new NumberLiteralArgumentContext(this, localctx);
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 47;
				this.match(RedQlParser.DecimalLiteral);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public attribute(): AttributeContext {
		let localctx: AttributeContext = new AttributeContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, RedQlParser.RULE_attribute);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 50;
			this.match(RedQlParser.Identifier);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public method(): MethodContext {
		let localctx: MethodContext = new MethodContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, RedQlParser.RULE_method);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 52;
			this.match(RedQlParser.Identifier);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}


	private static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!RedQlParser.__ATN) {
			RedQlParser.__ATN = new ATNDeserializer().deserialize(RedQlParser._serializedATN);
		}

		return RedQlParser.__ATN;
	}


	static DecisionsToDFA = RedQlParser._ATN.decisionToState.map( (ds: DecisionState, index: number) => new DFA(ds, index) );

}

export class RedQlContext extends ParserRuleContext {
	constructor(parser?: RedQlParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public blockOperator(): BlockOperatorContext {
		return this.getTypedRuleContext(BlockOperatorContext, 0) as BlockOperatorContext;
	}
	public EOF(): TerminalNode {
		return this.getToken(RedQlParser.EOF, 0);
	}
    public get ruleIndex(): number {
    	return RedQlParser.RULE_redQl;
	}
	public enterRule(listener: RedQlParserListener): void {
	    if(listener.enterRedQl) {
	 		listener.enterRedQl(this);
		}
	}
	public exitRule(listener: RedQlParserListener): void {
	    if(listener.exitRedQl) {
	 		listener.exitRedQl(this);
		}
	}
	// @Override
	public accept<Result>(visitor: RedQlParserVisitor<Result>): Result {
		if (visitor.visitRedQl) {
			return visitor.visitRedQl(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class BlockOperatorContext extends ParserRuleContext {
	constructor(parser?: RedQlParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
    public get ruleIndex(): number {
    	return RedQlParser.RULE_blockOperator;
	}
	public copyFrom(ctx: BlockOperatorContext): void {
		super.copyFrom(ctx);
	}
}
export class LoginAndBlockContext extends BlockOperatorContext {
	constructor(parser: RedQlParser, ctx: BlockOperatorContext) {
		super(parser, ctx.parentCtx, ctx.invokingState);
		super.copyFrom(ctx);
	}
	public singleExpression_list(): SingleExpressionContext[] {
		return this.getTypedRuleContexts(SingleExpressionContext) as SingleExpressionContext[];
	}
	public singleExpression(i: number): SingleExpressionContext {
		return this.getTypedRuleContext(SingleExpressionContext, i) as SingleExpressionContext;
	}
	public And_list(): TerminalNode[] {
	    	return this.getTokens(RedQlParser.And);
	}
	public And(i: number): TerminalNode {
		return this.getToken(RedQlParser.And, i);
	}
	public enterRule(listener: RedQlParserListener): void {
	    if(listener.enterLoginAndBlock) {
	 		listener.enterLoginAndBlock(this);
		}
	}
	public exitRule(listener: RedQlParserListener): void {
	    if(listener.exitLoginAndBlock) {
	 		listener.exitLoginAndBlock(this);
		}
	}
	// @Override
	public accept<Result>(visitor: RedQlParserVisitor<Result>): Result {
		if (visitor.visitLoginAndBlock) {
			return visitor.visitLoginAndBlock(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}
export class UnaryBlockContext extends BlockOperatorContext {
	constructor(parser: RedQlParser, ctx: BlockOperatorContext) {
		super(parser, ctx.parentCtx, ctx.invokingState);
		super.copyFrom(ctx);
	}
	public singleExpression(): SingleExpressionContext {
		return this.getTypedRuleContext(SingleExpressionContext, 0) as SingleExpressionContext;
	}
	public enterRule(listener: RedQlParserListener): void {
	    if(listener.enterUnaryBlock) {
	 		listener.enterUnaryBlock(this);
		}
	}
	public exitRule(listener: RedQlParserListener): void {
	    if(listener.exitUnaryBlock) {
	 		listener.exitUnaryBlock(this);
		}
	}
	// @Override
	public accept<Result>(visitor: RedQlParserVisitor<Result>): Result {
		if (visitor.visitUnaryBlock) {
			return visitor.visitUnaryBlock(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class SingleExpressionContext extends ParserRuleContext {
	constructor(parser?: RedQlParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
    public get ruleIndex(): number {
    	return RedQlParser.RULE_singleExpression;
	}
	public copyFrom(ctx: SingleExpressionContext): void {
		super.copyFrom(ctx);
	}
}
export class MemberDotExpressionContext extends SingleExpressionContext {
	constructor(parser: RedQlParser, ctx: SingleExpressionContext) {
		super(parser, ctx.parentCtx, ctx.invokingState);
		super.copyFrom(ctx);
	}
	public attribute(): AttributeContext {
		return this.getTypedRuleContext(AttributeContext, 0) as AttributeContext;
	}
	public Dot(): TerminalNode {
		return this.getToken(RedQlParser.Dot, 0);
	}
	public method(): MethodContext {
		return this.getTypedRuleContext(MethodContext, 0) as MethodContext;
	}
	public arguments(): ArgumentsContext {
		return this.getTypedRuleContext(ArgumentsContext, 0) as ArgumentsContext;
	}
	public enterRule(listener: RedQlParserListener): void {
	    if(listener.enterMemberDotExpression) {
	 		listener.enterMemberDotExpression(this);
		}
	}
	public exitRule(listener: RedQlParserListener): void {
	    if(listener.exitMemberDotExpression) {
	 		listener.exitMemberDotExpression(this);
		}
	}
	// @Override
	public accept<Result>(visitor: RedQlParserVisitor<Result>): Result {
		if (visitor.visitMemberDotExpression) {
			return visitor.visitMemberDotExpression(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class ArgumentsContext extends ParserRuleContext {
	constructor(parser?: RedQlParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public OpenParen(): TerminalNode {
		return this.getToken(RedQlParser.OpenParen, 0);
	}
	public CloseParen(): TerminalNode {
		return this.getToken(RedQlParser.CloseParen, 0);
	}
	public argument_list(): ArgumentContext[] {
		return this.getTypedRuleContexts(ArgumentContext) as ArgumentContext[];
	}
	public argument(i: number): ArgumentContext {
		return this.getTypedRuleContext(ArgumentContext, i) as ArgumentContext;
	}
	public Comma_list(): TerminalNode[] {
	    	return this.getTokens(RedQlParser.Comma);
	}
	public Comma(i: number): TerminalNode {
		return this.getToken(RedQlParser.Comma, i);
	}
    public get ruleIndex(): number {
    	return RedQlParser.RULE_arguments;
	}
	public enterRule(listener: RedQlParserListener): void {
	    if(listener.enterArguments) {
	 		listener.enterArguments(this);
		}
	}
	public exitRule(listener: RedQlParserListener): void {
	    if(listener.exitArguments) {
	 		listener.exitArguments(this);
		}
	}
	// @Override
	public accept<Result>(visitor: RedQlParserVisitor<Result>): Result {
		if (visitor.visitArguments) {
			return visitor.visitArguments(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class ArgumentContext extends ParserRuleContext {
	constructor(parser?: RedQlParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
    public get ruleIndex(): number {
    	return RedQlParser.RULE_argument;
	}
	public copyFrom(ctx: ArgumentContext): void {
		super.copyFrom(ctx);
	}
}
export class NumberLiteralArgumentContext extends ArgumentContext {
	constructor(parser: RedQlParser, ctx: ArgumentContext) {
		super(parser, ctx.parentCtx, ctx.invokingState);
		super.copyFrom(ctx);
	}
	public DecimalLiteral(): TerminalNode {
		return this.getToken(RedQlParser.DecimalLiteral, 0);
	}
	public enterRule(listener: RedQlParserListener): void {
	    if(listener.enterNumberLiteralArgument) {
	 		listener.enterNumberLiteralArgument(this);
		}
	}
	public exitRule(listener: RedQlParserListener): void {
	    if(listener.exitNumberLiteralArgument) {
	 		listener.exitNumberLiteralArgument(this);
		}
	}
	// @Override
	public accept<Result>(visitor: RedQlParserVisitor<Result>): Result {
		if (visitor.visitNumberLiteralArgument) {
			return visitor.visitNumberLiteralArgument(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}
export class AttributeArgumentContext extends ArgumentContext {
	constructor(parser: RedQlParser, ctx: ArgumentContext) {
		super(parser, ctx.parentCtx, ctx.invokingState);
		super.copyFrom(ctx);
	}
	public attribute(): AttributeContext {
		return this.getTypedRuleContext(AttributeContext, 0) as AttributeContext;
	}
	public enterRule(listener: RedQlParserListener): void {
	    if(listener.enterAttributeArgument) {
	 		listener.enterAttributeArgument(this);
		}
	}
	public exitRule(listener: RedQlParserListener): void {
	    if(listener.exitAttributeArgument) {
	 		listener.exitAttributeArgument(this);
		}
	}
	// @Override
	public accept<Result>(visitor: RedQlParserVisitor<Result>): Result {
		if (visitor.visitAttributeArgument) {
			return visitor.visitAttributeArgument(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}
export class ExpressionArgumentContext extends ArgumentContext {
	constructor(parser: RedQlParser, ctx: ArgumentContext) {
		super(parser, ctx.parentCtx, ctx.invokingState);
		super.copyFrom(ctx);
	}
	public singleExpression(): SingleExpressionContext {
		return this.getTypedRuleContext(SingleExpressionContext, 0) as SingleExpressionContext;
	}
	public enterRule(listener: RedQlParserListener): void {
	    if(listener.enterExpressionArgument) {
	 		listener.enterExpressionArgument(this);
		}
	}
	public exitRule(listener: RedQlParserListener): void {
	    if(listener.exitExpressionArgument) {
	 		listener.exitExpressionArgument(this);
		}
	}
	// @Override
	public accept<Result>(visitor: RedQlParserVisitor<Result>): Result {
		if (visitor.visitExpressionArgument) {
			return visitor.visitExpressionArgument(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class AttributeContext extends ParserRuleContext {
	constructor(parser?: RedQlParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public Identifier(): TerminalNode {
		return this.getToken(RedQlParser.Identifier, 0);
	}
    public get ruleIndex(): number {
    	return RedQlParser.RULE_attribute;
	}
	public enterRule(listener: RedQlParserListener): void {
	    if(listener.enterAttribute) {
	 		listener.enterAttribute(this);
		}
	}
	public exitRule(listener: RedQlParserListener): void {
	    if(listener.exitAttribute) {
	 		listener.exitAttribute(this);
		}
	}
	// @Override
	public accept<Result>(visitor: RedQlParserVisitor<Result>): Result {
		if (visitor.visitAttribute) {
			return visitor.visitAttribute(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class MethodContext extends ParserRuleContext {
	constructor(parser?: RedQlParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public Identifier(): TerminalNode {
		return this.getToken(RedQlParser.Identifier, 0);
	}
    public get ruleIndex(): number {
    	return RedQlParser.RULE_method;
	}
	public enterRule(listener: RedQlParserListener): void {
	    if(listener.enterMethod) {
	 		listener.enterMethod(this);
		}
	}
	public exitRule(listener: RedQlParserListener): void {
	    if(listener.exitMethod) {
	 		listener.exitMethod(this);
		}
	}
	// @Override
	public accept<Result>(visitor: RedQlParserVisitor<Result>): Result {
		if (visitor.visitMethod) {
			return visitor.visitMethod(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}
